# all-term

./: Cargo.toml  README.md
examples/: alternate_screen.rs  input.rs  raw_input.rs  simple.rs
src/: key.rs  lib.rs  style.rs  terminal.rs  terminal_backend.rs
src/backend/: mod.rs
src/backend/ansi/: ansi_terminal.rs  input.rs  mod.rs
src/backend/windows/: enable_ansi.rs  mod.rs  windows_terminal.rs
src/os/: mod.rs
src/os/unix/: mod.rs  raw_mode.rs  terminal_size.rs
src/os/windows/: console.rs  enable_ansi.rs  mod.rs  raw_mode.rs  terminal_size.rs
